--- a/javascriptdform.html
+++ b/javascriptdform.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      function greet(){
+        let name = document.querySelector('#name').value;
+        alert('hello, ' + name)
+      }
+      document.querySelector('form').addEventListener('submit', greet)
+    </script>
     <title>
       search
     </title>
